--- a/Simple Chatty Bot/How old are you?/task-info.yaml
+++ b/Simple Chatty Bot/How old are you?/task-info.yaml
@@ -112,5 +112,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/95/stages/525/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/95/stages/525/implement">JetBrains
+    Academy</a>
+  time: Thu, 16 Jul 2020 21:17:09 UTC
 record: -1
