Problem of the day solved.

--- a/Problems/Vowel or not/task-info.yaml
+++ b/Problems/Vowel or not/task-info.yaml
@@ -16,5 +16,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/4586
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution<br/><br/>Continue on <a href="https://hyperskill.org/learn/step/4586">JetBrains
+    Academy</a></html>
+  time: Thu, 13 Aug 2020 23:09:38 UTC
 record: -1
