--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -31,3 +31,7 @@ content:
 - Number squared
 - Vowel or not
 - Vowel or not
+- Get last digit
+- Distance
+- Area of a circle
+- Evaluate an expression
