--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -37,3 +37,7 @@ content:
 - Evaluate an expression
 - Grades
 - Evaluate an expression (1)
+- Difference between two doubles
+- Liquid pressure
+- Celsius to Fahrenheit
+- Find X
