--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -41,3 +41,14 @@ content:
 - Liquid pressure
 - Celsius to Fahrenheit
 - Find X
+- Simple expression
+- Exabytes
+- Percentage
+- Matching
+- LCM
+- LCM
+- Print two numbers on the same line
+- The information about a person
+- N-th symbol
+- Arithmetic expression
+- Date and time formatting
