--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -63,3 +63,7 @@ content:
 - Elvis throwing exceptions
 - Check length
 - Check length
+- String length
+- String or Int
+- Reverse me if you can
+- Check a number is positive
