--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -67,6 +67,8 @@ topics:
   - title: For loop and ranges
     theory_id: 4652
   3:
+  - title: Comments
+    theory_id: 4406
   - title: Coding style conventions
     theory_id: 4419
   - title: Naming variables
