--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -67,3 +67,11 @@ content:
 - String or Int
 - Reverse me if you can
 - Check a number is positive
+- Positive, Negative or Zero
+- Initializing an array of integers
+- Initializing an array of integers
+- Initializing an array of longs
+- Initializing an array
+- Swap elements
+- The sum of digits
+- Initializing an array of characters
