--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -75,3 +75,10 @@ content:
 - Swap elements
 - The sum of digits
 - Initializing an array of characters
+- Read and print
+- Summation
+- Polynomial
+- Gratuity
+- Calculate volume
+- Print Username
+- Concatenate 3 strings with separator
