--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -82,3 +82,13 @@ content:
 - Calculate volume
 - Print Username
 - Concatenate 3 strings with separator
+- URL
+- Greeting
+- Car price
+- Perimeter
+- Case insensitive
+- Case insensitive
+- Leap year
+- Sine and cosine
+- Heron's formula
+- Quadratic equation
