--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -92,3 +92,12 @@ content:
 - Sine and cosine
 - Heron's formula
 - Quadratic equation
+- Max of four numbers
+- Fractional part
+- Pow
+- Fourth root
+- The angle between vectors
+- Number dividers
+- Triples
+- Is it here?
+- Find the max
