--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -101,3 +101,9 @@ content:
 - Triples
 - Is it here?
 - Find the max
+- Check the numbers
+- Check the value (1)
+- Just checking
+- Individual taxes
+- Convert a date
+- Lucky number
