--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -107,3 +107,8 @@ content:
 - Individual taxes
 - Convert a date
 - Lucky number
+- Shape
+- The number of digits
+- The army of units
+- FTN-Numbers
+- Harry Potter
