--- a/Problems/Lucky number/task-info.yaml
+++ b/Problems/Lucky number/task-info.yaml
@@ -5,5 +5,9 @@ files:
   text: "fun main() {\n    // write your code here    \n}"
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/9046
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution<br/><br/>Continue on <a href="https://hyperskill.org/learn/step/9046">JetBrains
+    Academy</a></html>
+  time: Thu, 03 Sep 2020 22:47:01 UTC
 record: -1
