--- a/Problems/The army of units/task-info.yaml
+++ b/Problems/The army of units/task-info.yaml
@@ -12,7 +12,7 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/4610
-status: Unchecked
+status: Solved
 feedback:
   message: Failed to get check result from JetBrains Academy
   time: Wed, 02 Sep 2020 20:37:09 UTC
