--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -114,3 +114,7 @@ content:
 - Harry Potter
 - Size of parts
 - A simple calculator
+- Exception message
+- Handling strings
+- Converter to Double
+- Integer division
