--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -119,3 +119,5 @@ content:
 - Converter to Double
 - Integer division
 - Just checking (1)
+- The number of tens
+- How many nuts will be left after division
