Problem of the Day Solved.

--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -140,3 +140,4 @@ content:
 - Beyond the word
 - A small version of the Battleship game
 - Getting letters from the Alphabet
+- The maximum pairwise product
