Problem of the Day Solved.

--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -141,3 +141,8 @@ content:
 - A small version of the Battleship game
 - Getting letters from the Alphabet
 - The maximum pairwise product
+- Escapism
+- Help the teacher
+- Different colo(u)rs
+- Backslash problem
+- Kotlin code
